--- a/mawaris-master/src/app/component/footer/footer.html
+++ b/mawaris-master/src/app/component/footer/footer.html
@@ -39,22 +39,25 @@
         <p class="text-gray-300 text-sm mb-4">
           تواصل معنا عبر وسائل التواصل الاجتماعي
         </p>
-        <div class="flex gap-4">
-          <a href="#" class="bg-[#4a5568]/50 hover:bg-[#c0c0c0] hover:text-[#1a1f2e] text-white p-2 rounded-lg transition duration-300">
+        <div class="flex gap-4"> 
+          <a href="https://www.facebook.com/ntgclaritynetworks/" class="bg-[#4a5568]/50 hover:bg-[#0077B5] hover:text-[#1a1f2e] text-white p-2 rounded-lg transition duration-300">
             <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
               <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
             </svg>
           </a>
-          <a href="#" class="bg-[#4a5568]/50 hover:bg-[#c0c0c0] hover:text-[#1a1f2e] text-white p-2 rounded-lg transition duration-300">
+
+          <a href="https://x.com/NTGClarityInc" class="bg-[#4a5568]/50 hover:bg-[#0077B5] hover:text-[#1a1f2e] text-white p-2 rounded-lg transition duration-300">
             <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
               <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2s9 5 20 5a9.5 9.5 0 00-9-5.5c4.75 2.25 7-7 7-7s-1.1 2-3 4.2"/>
             </svg>
           </a>
-          <a href="#" class="bg-[#4a5568]/50 hover:bg-[#c0c0c0] hover:text-[#1a1f2e] text-white p-2 rounded-lg transition duration-300">
-            <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0m0 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10"/>
-            </svg>
-          </a>
+
+            <a href="https://www.linkedin.com/company/ntg-clarity" class="bg-[#4a5568]/50 hover:bg-[#0077B5] hover:text-[#1a1f2e] text-white p-2 rounded-lg transition duration-300">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+              
+              <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+          </svg>
+      </a>
         </div>
       </div>
     </div>
@@ -70,7 +73,7 @@
       <div class="flex items-center gap-2">
         <img src="NTG Logo.png" alt="NTG Logo" class="h-8 w-auto brightness-150" />
         <p class="text-gray-400 text-sm">
-          من تطوير <a href="https://ntgclarity.com" target="_blank" class="text-[#c0c0c0] font-semibold hover:underline">NTG Clarity</a>
+          من تطوير <a href="https://ntgclarity.com" target="_blank" class="text-[#c0c0c0] font-semibold hover:no-underline hover:text-white transition duration-200">NTG Clarity</a>
         </p>
       </div>
     </div>
